# albatros_frontend

./: Cargo.toml  README.md  flake.nix
src/: application.rs  main.rs  notifications.rs  profile.rs  settings.rs
src/components/: home.rs  settings.rs
