[package]
name = "albatros_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
	"debug",
	"advanced",
] }
iced_aw = "0.9"
tracing = "0.1"
color-eyre = "0.6"
uuid = "1.8"
